@@ -1,3 +1,9 @@
+Mon Mar 12 14:44:19 2001  George Lebl <jirka@5z.com>
+
+	* splash.c: Make it possible to make the done string translated, by
+	  translating the entire line for the "done", and making it a special
+	  case.
+
 Sat Mar 10 19:13:50 2001  George Lebl <jirka@5z.com>
 
 	* logout.c: freeing strings from under gettext is generally
